--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "A basic blog web app written in Node",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "uuid": "^3.0.1"
   }
