--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A basic blog web app written in Node",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "mocha ./test"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +14,13 @@
     "express": "^4.14.0",
     "morgan": "^1.7.0",
     "uuid": "^3.0.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/testinnplayin/basic-node-blogger.git"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0"
   }
 }
